--- a/gb/15/8/4/n4495336.md
+++ b/gb/15/8/4/n4495336.md
@@ -1,24 +1,22 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/xlget2929/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/xlget2929/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/xlget2929/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/xlget2929/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/xlget2929/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/xlget2929/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/xlget2929/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/xlget2929/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/xlget2929/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/xlget2929/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/xlget2929/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/xlget2929/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/xlget2929/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/xlget2929/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/xlget2929/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/xlget2929/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/xlget2929/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/xlget2929/www/master/t/djy/12.jpg" title="捐款"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/xlget2929/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/xlget2929/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/xlget2929/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/xlget2929/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/xlget2929/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/xlget2929/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/xlget2929/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/xlget2929/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/xlget2929/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/xlget2929/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/xlget2929/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/xlget2929/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/xlget2929/www/blob/master/README.md?zsrh#8">翻墙</a></p><p><a target="_blank" href="https://github.com/xlget2929/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/xlget2929/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/xlget2929/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/xlget2929/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/xlget2929/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/xlget2929/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/xlget2929/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/xlget2929/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/xlget2929/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/xlget2929/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/xlget2929/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/xlget2929/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/xlget2929/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/xlget2929/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/ydbzqt347/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/ydbzqt347/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/ydbzqt347/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>针灸防治关节炎（一）</h2>
-<img width="600" src="https://i.epochtimes.com/assets/uploads/2015/08/1503021448322700-600x400.jpg" />
-<h6>黄锦君医师。（左一）（新唐人电视提供）
-</h6>
+
+<h6></h6>
 <hr>
-<p>【大纪元2015年08月04日讯】（大纪元洛杉矶讯）依照传统<ahref="https://github.com/xlget2929/djy/blob/master/gb/tag/%E4%B8%AD%E5%8C%BB.md#1">中医</a>理论，人体要健康，百脉需通畅，五脏六腑的机能要正常，阴阳需平衡。黄锦君中医师是“黄氏<ahref="https://github.com/xlget2929/djy/blob/master/gb/tag/%E4%B8%80%E9%92%88%E9%80%9A.md#1">一针通</a>”疗法的发明人，以<ahref="https://github.com/xlget2929/djy/blob/master/gb/tag/%E9%92%88%E7%81%B8.md#1">针灸</a>见长，且其诊病与用针方法都非常独特，通常只需一针就让百脉通透，有让人震撼的感觉和明显的治疗效果，因此被患者尊称为“<ahref="https://github.com/xlget2929/djy/blob/master/gb/tag/%E5%A6%99%E5%8C%BB%E9%BB%84%E4%B8%80%E9%92%88.md#1">妙医黄一针</a>”。</p>
-<p><ahref="https://github.com/xlget2929/djy/blob/master/gb/tag/%E5%85%B3%E8%8A%82%E7%82%8E.md#1">关节炎</a>被称为全球慢性流行病。根据世界卫生组织的资料，2011年全球约有3.5亿人患有关节炎，到2020年，将会跃升至5.9亿。较常见且严重的关节炎疾病有风湿关节炎、类风湿性关节炎。</p>
-<p>主持人：说起风湿和类风湿<ahref="https://github.com/xlget2929/djy/blob/master/gb/tag/%E5%85%B3%E8%8A%82%E7%82%8E.md#1">关节炎</a>，我想观众首先会想了解，风湿和类风湿有什么分别，又有什么联系？</p>
-<p>黄医师：风湿与类风湿均属<ahref="https://github.com/xlget2929/djy/blob/master/gb/tag/%E4%B8%AD%E5%8C%BB.md#1">中医</a>“痹证”范畴。关节的肿痛，中医统称为痹症，麻痹的痹。虽然都是关节炎，都有关节疼痛症状，但并不是同一种病，不能混为一谈。</p>
+<p>【大纪元2015年08月04日讯】（大纪元洛杉矶讯）依照传统<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E4%B8%AD%E5%8C%BB.md#1">中医</a>理论，人体要健康，百脉需通畅，五脏六腑的机能要正常，阴阳需平衡。黄锦君中医师是“黄氏<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E4%B8%80%E9%92%88%E9%80%9A.md#1">一针通</a>”疗法的发明人，以<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E9%92%88%E7%81%B8.md#1">针灸</a>见长，且其诊病与用针方法都非常独特，通常只需一针就让百脉通透，有让人震撼的感觉和明显的治疗效果，因此被患者尊称为“<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E5%A6%99%E5%8C%BB%E9%BB%84%E4%B8%80%E9%92%88.md#1">妙医黄一针</a>”。</p>
+<p><ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E5%85%B3%E8%8A%82%E7%82%8E.md#1">关节炎</a>被称为全球慢性流行病。根据世界卫生组织的资料，2011年全球约有3.5亿人患有关节炎，到2020年，将会跃升至5.9亿。较常见且严重的关节炎疾病有风湿关节炎、类风湿性关节炎。</p>
+<p>主持人：说起风湿和类风湿<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E5%85%B3%E8%8A%82%E7%82%8E.md#1">关节炎</a>，我想观众首先会想了解，风湿和类风湿有什么分别，又有什么联系？</p>
+<p>黄医师：风湿与类风湿均属<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E4%B8%AD%E5%8C%BB.md#1">中医</a>“痹证”范畴。关节的肿痛，中医统称为痹症，麻痹的痹。虽然都是关节炎，都有关节疼痛症状，但并不是同一种病，不能混为一谈。</p>
 <p>风湿性关节炎就是一个细菌感染的变态反应， 也叫超敏反应， 有红肿热痛，主要反映在人体的大关节，而且会累积心脏。</p>
 <p>类风湿关节炎是免疫亢奋性疾病，就是自身的免疫细胞大量侵吞自已的好细胞，表现为人体的小关节变形。</p>
 <p>主持人：很多人一到天气变化的时候，就会感觉到自己的关节隐隐作痛，像天气预报员一样，这是属于风湿痛吧？</p>
 <p>黄医师：是的。这种属于风湿痛。</p>
 <p>主持人：我们请黄医师先讲解一下风湿痛的病因。</p>
 <p>黄医生：主要是风、寒、湿、热引起，关节使用过度或不足：运动过多/从不运动。<br />
-	<img src="https://i.epochtimes.com/assets/uploads/2015/08/1508031612342700-600x253.jpg" alt="" title="" width="600" b="253"
-	class="size-large wp-image-5896294" /></a><br />主持人：中医一般怎么诊治风湿呢？黄医师您在这方面有什么特长？</p>
-<p>黄医师：<ahref="https://github.com/xlget2929/djy/blob/master/gb/tag/%E9%92%88%E7%81%B8.md#1">针灸</a>在治疗风湿病上已有上千年的历史。我习惯用针灸治疗。一针打通血脉，清热疏风，散寒祛湿。</p>
+	<ahref=" https://i.epochtimes.com/assets/uploads/2015/08/1508031612342700-600x253.jpg" target="_blank" rel="noreferrer noopener"></a><br />主持人：中医一般怎么诊治风湿呢？黄医师您在这方面有什么特长？</p>
+<p>黄医师：<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E9%92%88%E7%81%B8.md#1">针灸</a>在治疗风湿病上已有上千年的历史。我习惯用针灸治疗。一针打通血脉，清热疏风，散寒祛湿。</p>
 <p>风邪：风邪首先侵害的是在颈部， 风池、风门穴等。</p>
 <p>湿邪：六淫里最难治疗的，粘液性，粘重，分子小。患者多阳气不足。主要以治疗脾经为主。</p>
 <p>寒邪：遇冷则凝，像天气预报一像，比如要下雨，只要天气从一个季节转季就表现明显。我的针扎督脉上，就像后背晒太阳，把人体的阳气提起来 。</p>
@@ -32,7 +30,7 @@
 <p>建议：外伤型的一定要及早治疗。如果转成慢性关节炎，就难治疗。</p>
 <p>主持人：中医怎么看类风湿，究竟是一种什么样的疾病？</p>
 <p>黄医师： 中医认为类风湿性关节炎的产生是人体气血两虚和心、肝、脾、肺、肾等脏器功能运化失常，进而导致经络运行受阻，四肢关节肿胀疼痛，最后导致残疾。脾/肾的治疗是重点。类风湿要及早治疗，晚期根本就没得治了，自杀都没有力气，生不如死。（待续）◇</p>
-<p><h2>“<ahref="https://github.com/xlget2929/djy/blob/master/gb/tag/%E5%A6%99%E5%8C%BB%E9%BB%84%E4%B8%80%E9%92%88.md#1">妙医黄一针</a>”节目</h2>
+<p><h2>“<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E5%A6%99%E5%8C%BB%E9%BB%84%E4%B8%80%E9%92%88.md#1">妙医黄一针</a>”节目</h2>
 <p>新唐人电视台“妙医黄一针”系列节目内容包括针灸治疗癌症、中风后遗症、痛症、高血压、花粉过敏、胃炎、妇科病、失眠、类风湿、糖尿病等，以及运用针灸进行美容和保健。</p>
 <p><h2>收看指南：</h2>
 <p>Youtube视频存档：https：//goo.gl/alAFlI</p>
@@ -50,42 +48,47 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/xlget2929/djy/blob/master/gb/15/3/3/n4378095.md#1">“妙医黄一针”的故事（一）</a></li>
-<li><a href="https://github.com/xlget2929/djy/blob/master/gb/15/3/11/n4384599.md#1">“妙医黄一针”的故事（二）</a></li>
-<li><a href="https://github.com/xlget2929/djy/blob/master/gb/15/3/19/n4390934.md#1">“妙医黄一针”的故事（三）</a></li>
-<li><a href="https://github.com/xlget2929/djy/blob/master/gb/15/3/24/n4394843.md#1">针灸治疗肾衰（一）</a></li>
-<li><a href="https://github.com/xlget2929/djy/blob/master/gb/15/4/2/n4402179.md#1">针灸治疗肾衰之病例</a></li>
-<li><a href="https://github.com/xlget2929/djy/blob/master/gb/15/4/11/n4409033.md#1">中医治疗癌症：祛邪扶正</a></li>
-<li><a href="https://github.com/xlget2929/djy/blob/master/gb/15/4/15/n4411826.md#1">针灸治疗癌症之病例</a></li>
-<li><a href="https://github.com/xlget2929/djy/blob/master/gb/15/4/23/n4417974.md#1">针灸治疗中风后遗症（一）</a></li>
-<li><a href="https://github.com/xlget2929/djy/blob/master/gb/15/4/30/n4423475.md#1">针灸治疗中风后遗症（二）</a></li>
-<li><a href="https://github.com/xlget2929/djy/blob/master/gb/15/5/6/n4427870.md#1">针灸止痛（一）</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/15/3/3/n4378095.md#1">“妙医黄一针”的故事（一）</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/15/3/11/n4384599.md#1">“妙医黄一针”的故事（二）</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/15/3/19/n4390934.md#1">“妙医黄一针”的故事（三）</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/15/3/24/n4394843.md#1">针灸治疗肾衰（一）</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/15/4/2/n4402179.md#1">针灸治疗肾衰之病例</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/15/4/11/n4409033.md#1">中医治疗癌症：祛邪扶正</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/15/4/15/n4411826.md#1">针灸治疗癌症之病例</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/15/4/23/n4417974.md#1">针灸治疗中风后遗症（一）</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/15/4/30/n4423475.md#1">针灸治疗中风后遗症（二）</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/15/5/6/n4427870.md#1">针灸止痛（一）</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/8/7/n11437710.md#1" target="_blank">林辉：国民党撤至台湾后破获的中共渗透大案</a></li><li><a href="https://github.com/xlget2929/www/blob/master/README.md?dfh#1" target="_blank">下载免费翻墙软件</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/12/8/9/n3655381.md#1" target="_blank">揭秘：中共诬陷法轮功是这样编出来的</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank">揭开活摘器官黑幕</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/3/12/n11108271.md#1" target="_blank">林辉：从农民吃光“忆苦饭”看中国农村真相</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/9/17/n10720119.md#1" target="_blank">俞晓薇：迫害好人路不通 中共作恶者务必赎罪</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/xlget2929/djy/blob/master/gb/20/3/23/n11967780.md#1">【新闻看点】川习对话说啥 红二代倒戈习危急？</a></li>
-<li><a href="https://github.com/xlget2929/djy/blob/master/gb/20/3/24/n11968465.md#1">【拍案惊奇】习近平有险？三峡大坝被爆危机</a></li>
-<li><a href="https://github.com/xlget2929/djy/blob/master/gb/20/3/23/n11968139.md#1">马列教授千里散毒？意首例确诊病例身份曝光</a></li>
-<li><a href="https://github.com/xlget2929/djy/blob/master/gb/20/3/23/n11965551.md#1">分析：大疫之下中国两千万手机用户消失</a></li>
-<li><a href="https://github.com/xlget2929/djy/blob/master/gb/20/3/23/n11964881.md#1">武汉病例清零内幕被曝光 北京通知露端倪</a></li>
-<li><a href="https://github.com/xlget2929/djy/blob/master/gb/20/3/23/n11965271.md#1">刘真惊传病逝 留下4岁女儿 享年44岁　</a></li>
-<li><a href="https://github.com/xlget2929/djy/blob/master/gb/20/3/22/n11963031.md#1">胞弟成为台湾女婿 瑞莎曝婚礼照喊开心</a></li>
-<li><a href="https://github.com/xlget2929/djy/blob/master/gb/20/3/23/n11966011.md#1">刘真44岁辞世 演艺圈好友不舍</a></li>
-<li><a href="https://github.com/xlget2929/djy/blob/master/gb/20/3/22/n11964501.md#1">湖北病例零增长？台湾网红:中共谎言害惨世界</a></li>
-<li><a href="https://github.com/xlget2929/djy/blob/master/gb/20/3/24/n11969412.md#1">刘真灵堂预计25日开放 追思会下月举行</a></li>
-<li><a href="https://github.com/xlget2929/djy/blob/master/gb/20/3/22/n11964127.md#1">后悔或是一味良药 但须在大限前</a></li>
-<li><a href="https://github.com/xlget2929/djy/blob/master/gb/20/3/17/n11945807.md#1">2020 否极泰来</a></li>
-<li><a href="https://github.com/xlget2929/djy/blob/master/gb/20/3/21/n11961878.md#1">【历史回眸】人们忘记神 这就是一切的起因</a></li>
-<li><a href="https://github.com/xlget2929/djy/blob/master/gb/20/2/27/n11900217.md#1">【历史上的瘟疫】“上帝之鞭”：欧洲黑死病</a></li>
-<li><a href="https://github.com/xlget2929/djy/blob/master/gb/20/3/14/n11939926.md#1">现世报：危机窥伺中得恩报 毫无预警下遭恶报</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/27/n13675586.md#1">沉睡二千五百年绝世神剑  先进科技惊震天下</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/21/12/21/n13451605.md#1">【百年真相】到底谁是特务？延安整风内幕</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/18/n13656536.md#1">【百年真相】发言3分钟右派20年 朱镕基说了啥</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/25/n13671775.md#1">【战争随笔】基辅印象 温暖而有风度</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/27/n13676985.md#1">【未解之谜】高级生命控制星体和人类的对应？</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13689405.md#1">【财商天下】水泥地种粮食 中国复耕“大跃进”</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13689428.md#1">【军事热点】美国新国防战略 中共位居威胁之首</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13688842.md#1">【十字路口】曹兴诚重炮轰 中共是“人类公敌”</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13687190.md#1">王友群：朱镕基反对习近平三连任？</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13684346.md#1">应勇卸任湖北一把手 美分析师：是条大新闻</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13685194.md#1">上海防疫水深？ 张文宏消失 左派提路线斗争</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13688133.md#1">台剧艺人陈熙锋喜迎千金 全程陪产记录感动</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13687135.md#1">奥斯卡颁奖时挨史密斯一巴掌 洛克3天后首发声</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13687324.md#1">睽违18年再合作 梁朝伟刘德华新片造型曝光</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13684323.md#1">章子怡引对联悼东航空难 用词意外引热议</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13684458.md#1">90后杨紫粉丝闹乌龙 功夫影星杨紫琼登热搜</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13683454.md#1">5种超级蔬菜 抗氧化、提高免疫又防癌症</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13683642.md#1">水果剥皮直接吃是错的！吃水果的7大误区</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13686139.md#1">研究：打新冠疫苗几个月后的心脏异常</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/29/n13681028.md#1">提高抗氧化水平 维生素C的6大好处</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13686756.md#1">巨星布鲁斯威利患失语症 医：警惕2大原因</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/xlget2929/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/xlget2929/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/15/8/4/n4495336.htm">针灸防治关节炎（一）</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/ydbzqt347/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/ydbzqt347/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/15/8/4/n4495336.htm">针灸防治关节炎（一）</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/xlget2929/djy/blob/master/gb/15/8/4/n4495336.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/xlget2929/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xlget2929/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/xlget2929/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/xlget2929/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/xlget2929/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xlget2929/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/xlget2929/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xlget2929/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/xlget2929/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xlget2929/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/xlget2929/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xlget2929/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/xlget2929/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xlget2929/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/xlget2929/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xlget2929/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/xlget2929/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xlget2929/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/xlget2929/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xlget2929/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/xlget2929/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xlget2929/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/xlget2929/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xlget2929/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/xlget2929/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xlget2929/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/xlget2929/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xlget2929/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/xlget2929/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xlget2929/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/xlget2929/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xlget2929/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/xlget2929/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xlget2929/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/xlget2929/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xlget2929/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/xlget2929/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xlget2929/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/xlget2929/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xlget2929/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/xlget2929/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xlget2929/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/xlget2929/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xlget2929/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/xlget2929/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xlget2929/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/xlget2929/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xlget2929/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/ydbzqt347/djy/blob/master/gb/15/8/4/n4495336.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/ydbzqt347/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/ydbzqt347/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
