--- a/gb/22/4/2/n13690935.md
+++ b/gb/22/4/2/n13690935.md
@@ -18,6 +18,13 @@
 <p>乌克兰国防部副部长汉娜·玛丽亚（Hanna Maliar）周六说，基辅地区已经摆脱俄军控制。</p>
 <p>她在脸书上发文说，布卡（或译步查，Bucha）、伊尔平（Irpin）、霍斯托梅尔（Hostomel）和“整个基辅地区都从入侵者手中获得解脱”。</p>
 <p>CNN无法立即证实是否乌军将俄军从整个基辅地区清除了出去。但乌军最近几天已经重新控制了首都周围的郊区，而这些郊区仍在政府控制之下。俄军表示，在基辅周围的军事行动正在“降级”。</p>
+<h3>泽连斯基：俄军撤退 地雷威胁基辅</h3>
+<p>在乌克兰官员称乌方已收回首都附近几个地区之际，乌克兰总统泽连斯基周六警告说，俄军在房屋周围留下地雷、废弃设备和遇难者尸体，给平民造成“灾难性”局面。</p>
+<p>“即使在我们战斗后夺回的领土上，仍然不可能恢复正常生活，就像过去那样。”他在每晚的视频信息中告诉本国人。</p>
+<p>他说：“我们需要等待，直到我们的土地得以清除，直到我们能够向你们保证不会有新一轮炮击。”</p>
+<p>乌克兰和西方盟友报告说，越来越多的证据表明，俄罗斯在从基辅周围撤军，并向乌克兰东部派兵。</p>
+<p>官员们说，乌克兰的战士们已经收复了其首都附近的几个地区，包括布罗瓦里市（Brovary）。</p>
+<p>按照福克斯新闻的说法，然而，这一转变并不意味着该国所面临的战情得以缓和。</p>
 <h3>乌官员：俄导弹袭击了乌中部两个城市</h3>
 <p>据波尔塔瓦（Poltava）地区负责人说，俄罗斯导弹周六袭击了乌克兰中部的两个城市，破坏了基础设施和住宅建筑。</p>
 <p>“波尔塔瓦，在夜里，一枚导弹击中了其中一个基础设施。”德米特里?卢宁（Dmitry Lunin）在Telegram上说。</p>
@@ -126,13 +133,13 @@
 <strong>相关新闻：</strong>
 <li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13689482.md#1">俄石油公司燃料库发生大火 视频曝光</a></li>
 <li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13689683.md#1">乌情报：在俄入侵前 中共大规模网攻乌克兰</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13689827.md#1">新世纪力作《演员梦》获七奖 两女主双双获奖</a></li>
 <li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/2/n13691366.md#1">俄乌战影响 大连港到欧洲铁路出口骤降</a></li>
-<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/2/n13691176.md#1">法驻沪总领事馆：不要因防疫将父母和孩子分开</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/upjkzu3674/www/blob/master/README.md?dfh#9" target="_blank">永恒的见证</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/3/4/n11088075.md#1" target="_blank">野狐一禅：刻我心碑上的右派精英</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/8/27/n11480776.md#1" target="_blank">印度中部城市学校师生学炼法轮功</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank">探寻真相兼听则明</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/5/4/n10361532.md#1" target="_blank">周晓辉：恩格斯资助马克思并为其顶包背后</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/12/4/n10890780.md#1" target="_blank">天空出现“真善忍” 西澳女子圆梦</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
@@ -141,9 +148,9 @@
 <li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/18/n13656536.md#1">【百年真相】发言3分钟右派20年 朱镕基说了啥</a></li>
 <li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/25/n13671775.md#1">【战争随笔】基辅印象 温暖而有风度</a></li>
 <li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/27/n13676985.md#1">【未解之谜】高级生命控制星体和人类的对应？</a></li>
-<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13687492.md#1">【未解之谜】濒死体验 神启：生命可以选择</a></li>
-<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13689709.md#1">【唐瑞讲故事】朗读｜小熊维尼第五章</a></li>
-<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13688941.md#1">【秦鹏直播】乌克兰反攻开始？欧盟警告北京</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13689405.md#1">【财商天下】水泥地种粮食 中国复耕“大跃进”</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13689428.md#1">【军事热点】美国新国防战略 中共位居威胁之首</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13688842.md#1">【十字路口】曹兴诚重炮轰 中共是“人类公敌”</a></li>
 <li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13687190.md#1">王友群：朱镕基反对习近平三连任？</a></li>
 <li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13684346.md#1">应勇卸任湖北一把手 美分析师：是条大新闻</a></li>
 <li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13685194.md#1">上海防疫水深？ 张文宏消失 左派提路线斗争</a></li>
