--- a/gb/22/4/2/n13690935.md
+++ b/gb/22/4/2/n13690935.md
@@ -139,7 +139,7 @@
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank">解体中共复兴中华</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/10/22/n9758393.md#1" target="_blank">刘晓：中共吹捧的商鞅非良臣 创万世恶法</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/8/30/n11489139.md#1" target="_blank">组图一：法轮功学员欧洲盛大游行 震撼世人</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank">加拿大总理的贺信</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/11/17/n9856265.md#1" target="_blank">毛泽东诗词中的“真情”与马列婚外情</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/4/28/n9085516.md#1" target="_blank">一位英国亚裔女士的生命礼物</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
