--- a/gb/22/4/2/n13690935.md
+++ b/gb/22/4/2/n13690935.md
@@ -139,7 +139,7 @@
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank">加拿大总理的贺信</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/11/17/n9856265.md#1" target="_blank">毛泽东诗词中的“真情”与马列婚外情</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/4/28/n9085516.md#1" target="_blank">一位英国亚裔女士的生命礼物</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank">不一样的海外校园</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/6/17/n11326982.md#1" target="_blank">金言：香港反送中会引发“蝴蝶效应”？</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/6/28/n11352966.md#1" target="_blank">袁红冰：法轮功对中国政治的影响</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
